--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <div class="row">
             <div class="col">
               <a href="#">Announcement</a>
+            </div>
+            <div class="col">
               <p>How we're responding to COVID-19</p>
             </div>
         </div>
