--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
        <div class="container text-center">
         <div class="row">
             <div class="col">
-              <a href="#">Announcement</a>
-            </div>
-            <div class="col">
-              <p>How we're responding to COVID-19</p>
+              <ul>
+              <li><a href="#">Announcement</a></li>        
+              <li>How we're responding to COVID-19</li>
+            </ul>
             </div>
         </div>
        </div>        
