--- a/index.html
+++ b/index.html
@@ -20,8 +20,26 @@
         </div>
        </div>        
     </section>
+    <section class="navbar">
+      <div class="container">
+      <div class="col-md-4">
+        <img src="https://assets.website-files.com/5e7ff3ec0c4ef4c974fa99e3/5e7ff57adad44d1f072965b6_logo.svg" alt="website-logo">
+      </div>
+      <div class="col-md-8">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Shop</a></li>
+          <li><a href="#">Donate</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a class="shopping-cart-btn" href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+        </ul>
+      </div>
+    </div>
+    </section>
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+   <script src="https://kit.fontawesome.com/aaac0c0714.js" crossorigin="anonymous"></script>
   </body>
 </body>
 </html>
