--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="navbar">
       <div class="container">
       <div class="col-md-4">
-        <img src="https://assets.website-files.com/5e7ff3ec0c4ef4c974fa99e3/5e7ff57adad44d1f072965b6_logo.svg" alt="website-logo">
+        <a href="#"><img src="https://assets.website-files.com/5e7ff3ec0c4ef4c974fa99e3/5e7ff57adad44d1f072965b6_logo.svg" alt="website-logo"></a>
       </div>
       <div class="col-md-8">
         <ul>
@@ -36,6 +36,16 @@
         </ul>
       </div>
     </div>
+    </section>
+    <section class="hero">
+      <div class="container">
+        <div class="col-lg-4">
+      <h1>Serving you since 1967</h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio sunt maiores expedita inventore nam minus.</p>
+      <a href="#">Shop Merch</a>
+    </div>
+    </div>
+
     </section>
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
