*started doing support section and product cards

--- a/index.html
+++ b/index.html
@@ -45,7 +45,39 @@
       <a href="#">Shop Merch</a>
     </div>
     </div>
-
+    </section>
+    <section class="support">
+      <div class="container">
+        <div class="row pb-4">
+          <div class="col-md-6">
+            <span>ways to support</span>
+            <h1>Support Acme Outdoors.</h1>
+          </div>
+          <div class="col-md-6">
+            <p>COVID-19 has forced us to close our retail space, but we need support from patrons like yourself now more than ever. Below, we’ve listed the best ways to help us through this season.</p>
+          </div>
+        </div>
+           <div class="row">
+            <div class="col-lg-4 col-md-4">
+              <div class="product-wrapper">
+                <h1 class="product-heading-numbers">01</h1>
+                <h1 class="product-heading">Shop Products</h1>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4">
+              <div class="product-wrapper">
+                <h1 class="product-heading-numbers">02</h1>
+                <h1 class="product-heading">Donate</h1>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4">
+              <div class="product-wrapper">
+                <h1 class="product-heading-numbers">03</h1>
+                <h1 class="product-heading">Buy Gift Cards</h1>
+              </div>
+            </div>
+           </div>
+      </div>
     </section>
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
