* changed logo, colors, and some text

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="row">
             <div class="col">
               <ul>
-              <li><a href="#">Announcement</a></li>        
-              <li>How we're responding to COVID-19</li>
+              <li><a href="#">Click Here</a></li>        
+              <li>to find us on Booking</li>
             </ul>
             </div>
         </div>
@@ -23,14 +23,14 @@
     <section class="navbar">
       <div class="container">
       <div class="col-md-4">
-        <a href="#"><img src="https://assets.website-files.com/5e7ff3ec0c4ef4c974fa99e3/5e7ff57adad44d1f072965b6_logo.svg" alt="website-logo"></a>
+        <a href="#"><img src="img/logo-site.png" alt="website-logo"></a>
       </div>
       <div class="col-md-8">
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
           <li><a href="#">Shop</a></li>
-          <li><a href="#">Donate</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Blog</a></li>
           <li><a href="#">Contact</a></li>
           <li><a class="shopping-cart-btn" href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
         </ul>
@@ -40,9 +40,9 @@
     <section class="hero">
       <div class="container">
         <div class="col-lg-4">
-      <h1>Serving you since 1967</h1>
+      <h1>Discover your true self</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio sunt maiores expedita inventore nam minus.</p>
-      <a href="#">Shop Merch</a>
+      <a href="#">Web Shop</a>
     </div>
     </div>
     </section>
@@ -50,11 +50,11 @@
       <div class="container">
         <div class="row pb-4">
           <div class="col-md-6">
-            <span>ways to support</span>
-            <h1>Support Acme Outdoors.</h1>
+            <span>ways to go</span>
+            <h1>Support Alps Associtaion.</h1>
           </div>
           <div class="col-md-6">
-            <p>COVID-19 has forced us to close our retail space, but we need support from patrons like yourself now more than ever. Below, we’ve listed the best ways to help us through this season.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ipsam illo voluptatum facere, iure reiciendis cum facilis necessitatibus cupiditate fuga! Lorem ipsum dolor sit amet.</p>
           </div>
         </div>
            <div class="row">
