fixed position for announcement and navbar section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+<div class="announcement-and-navbar-wrapper"> <!--css is inside _announcement.scss file-->
     <section class="announcement">
        <div class="container text-center">
         <div class="row">
@@ -37,6 +38,7 @@
       </div>
     </div>
     </section>
+</div>
     <section class="hero">
       <div class="container">
         <div class="col-lg-4">
