--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Business Site</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
+    <script src="https://kit.fontawesome.com/aaac0c0714.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
 <div class="announcement-and-navbar-wrapper"> <!--css is inside _announcement.scss file-->
@@ -81,9 +83,6 @@
            </div>
       </div>
     </section>
-
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-   <script src="https://kit.fontawesome.com/aaac0c0714.js" crossorigin="anonymous"></script>
   </body>
 </body>
 </html>
