--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="col">
               <ul>
               <li><a href="#">Click Here</a></li>        
-              <li>to find us on Booking</li>
+              <li>To find us on Booking</li>
             </ul>
             </div>
         </div>
