changed containers to xl

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="announcement-and-navbar-wrapper"> <!--css is inside _announcement.scss file-->
     <section class="announcement">
-       <div class="container text-center">
+       <div class="container-xl text-center">
         <div class="row">
             <div class="col">
               <ul>
@@ -24,7 +24,7 @@
        </div>        
     </section>
     <section class="navbar">
-      <div class="container">
+      <div class="container-xl">
       <div class="col-md-4">
         <a href="#"><img src="img/logo-site.png" alt="website-logo"></a>
       </div>
@@ -42,7 +42,7 @@
     </section>
 </div>
     <section class="hero">
-      <div class="container">
+      <div class="container-xl">
         <div class="col-lg-4">
       <h1>Discover your true self</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio sunt maiores expedita inventore nam minus.</p>
@@ -51,7 +51,7 @@
     </div>
     </section>
     <section class="support">
-      <div class="container">
+      <div class="container-xl">
         <div class="row pb-4">
           <div class="col-md-6">
             <span>ways to go</span>
