replaced media queries inside announcement

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </ul>
       </div>
     </div>
+    <button class="hamburger-menu-btn"><i class="fa-solid fa-bars-staggered"></i></button>
     </section>
 </div>
     <section class="hero">
