--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </ul>
       </div>
     </div>
-    <button class="hamburger-menu-btn"><i class="fa-solid fa-bars-staggered"></i></button>
+    <button class="hamburger-menu-btn" id="hamburger-menu-btn"><i class="fa-solid fa-bars-staggered"></i></button>
     </section>
 </div>
     <section class="hero">
