--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/index.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <script src="https://kit.fontawesome.com/aaac0c0714.js" crossorigin="anonymous" defer></script>
+    <script src="script/hamburger_menu.js" defer></script>
 </head>
 <body>
 <div class="announcement-and-navbar-wrapper"> <!--css is inside _announcement.scss file-->
@@ -36,10 +37,12 @@
           <li><a href="#">Blog</a></li>
           <li><a href="#">Contact</a></li>
           <li><a class="shopping-cart-btn" href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+          <li class="hamburger-menu-li">
+            <button class="hamburger-menu-btn" id="hamburger-menu-btn"><i class="fa-solid fa-bars-staggered"></i></button>
+          </li>
         </ul>
       </div>
     </div>
-    <button class="hamburger-menu-btn" id="hamburger-menu-btn"><i class="fa-solid fa-bars-staggered"></i></button>
     </section>
 </div>
     <section class="hero">
